--- a/docs/Makefile
+++ b/docs/Makefile
@@ -41,7 +41,8 @@ help:
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
 clean:
-	-rm -rf $(BUILDDIR)/*
+	-rm -rf $(BUILDDIR)/html/*
+	-rm -rf $(BUILDDIR)/doctrees/*
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
