--- a/docs/Makefile
+++ b/docs/Makefile
@@ -45,7 +45,7 @@ clean:
 	-rm -rf $(BUILDDIR)/doctrees/*
 
 html:
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	$(SPHINXBUILD) -b html -D imgmath_latex=latex $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
